--- a/back-vtracker/package.json
+++ b/back-vtracker/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.5.2",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "mongodb": "^6.1.0"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/node": "20.6.0",
+    "prisma": "^5.5.2",
     "tsc-watch": "6.0.4",
     "typescript": "5.2.2"
   }
