added cors for local api request

--- a/back-vtracker/package.json
+++ b/back-vtracker/package.json
@@ -17,8 +17,10 @@
     "mongodb": "^6.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.17",
     "@types/node": "20.6.0",
+    "cors": "^2.8.5",
     "tsc-watch": "6.0.4",
     "typescript": "5.2.2"
   }
